octavia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: load-balancer
  namespace: openstack
spec:
  tls:
    - hosts:
        - "load-balancer.ctl1-humanz.cloud"
      secretName: humanz-cloud-tls
  ingressClassName: nginx
  rules:
  - host: load-balancer.ctl1-humanz.cloud
    http:
      paths:
      - backend:
          service:
            name: octavia-api
            port:
              name: o-api
        path: /
        pathType: Prefix
